# cash_register

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  sonar-project.properties  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
docs/: development.md
src/cash_register/: apps.py  models.py  types.py  views.py
src/cash_register/data/: levels.yaml  products.yaml
src/cash_register/migrations/: 0001_initial.py
src/cash_register/services/: banknotes.py  game.py  products.py
src/cash_register/services/repositories/: levels.py  products.py
src/cash_register/static/css/: style.css
src/cash_register/templates/cash_register/: cashes.html  debug.html  game.html  game_page.html  index.html  screen.html  screen_amount.html
src/cash_register/templates/cash_register/cash_register/: buttons.html  cash.html
src/cash_register/templates/cash_register/change/: cash.html
src/cash_register/templates/cash_register/htmx/: hx_cash_register.html  hx_game.html  hx_purchase.html  hx_screen.html
src/cash_register/templates/cash_register/purchase/: buttons.html  cash.html
src/cash_register/templates/cotton/: cash.html  money.html
src/config/: settings.py  urls.py
src/config/settings/: __init__.py  default_django.py  n10_default_django.py  n20_project.py  project.py
src/users/: models.py
src/users/migrations/: 0001_initial.py  0002_gamer_code.py
src/users/services/: gamer.py
tests/bdd/features/: anonymous_user_on_home_page.feature  login.feature
tests/bdd/implementation/: test_open_page.py
tests/gamer/: conftest.py  test_banknotest.py  test_create.py  test_create_gamer.py  test_game.py  test_product.py  test_views.py
