[project]
name = "cash-register"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "django-cotton>=2.5.0",
    "django-htmx>=1.27.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.8",
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
    "ruff>=0.14.8",
]


[tool.pytest]
pythonpath = ["./src"]
DJANGO_SETTINGS_MODULE = "config.settings"
