[project]
name = "cash-register"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "django-cotton>=2.5.0",
    "django-htmx>=1.27.0",
    "django-stubs-ext>=5.2.8",
    "pydantic>=2.12.5",
    "ruyaml>=0.91.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.8",
    "mypy>=1.19.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
    "ruff>=0.14.8",
]


[tool.pytest]
pythonpath = ["./src"]
DJANGO_SETTINGS_MODULE = "config.settings"

[tool.basedpyright]
extraPaths = [ "src" ]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
mypy_path = "src"
exclude = ["typings"]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.ruff]
exclude = [".git", ".venv", "typings"]
